--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -19,7 +19,7 @@ const data: any = await getRepositoryCommits(owner, repor, token)
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
-		<main>
+		<main class="mt-12 px-32">
 			<h1>
 				{JSON.stringify(data.commits[0])}
 			</h1>
