--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="w-full px-32 py-2 mt-6">
+<footer class="w-full">
 	<p>&copy; {today.getFullYear()} Viriato Nova</p>
 </footer>
