--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -2,8 +2,31 @@
 import { SITE_TITLE } from '../consts';
 ---
 
-<header class="w-full px-32 py-2 shadow-md">
-	<nav>
-		<h2>{SITE_TITLE}</h2>
-	</nav>
+<header class="w-full mt-4 flex justify-start border-b border-neutral-700">
+	<section class="w-full">
+		<h2 class="text-2xl">{SITE_TITLE}</h2>
+		<nav class="mt-2 py-2 flex space-x-6 list-none">
+			<li><a href="/" target="_blank" rel="noopener noreferrer">Home</a></li>
+			<li><a href="/" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
+			<li><a href="/" target="_blank" rel="noopener noreferrer">Contato</a></li>
+		</nav>
+	</section>
+	<section class="w-full flex justify-start items-center">
+		<fieldset class="w-full relative"> 
+			<input 
+				type="text" 
+				name="" 
+				id=""
+				class="w-full h-8 px-2
+				border border-neutral-500 rounded-md 
+				focus:outline-none focus:shadow-sm 
+				focus:ring-2 ring-cyan-400"
+			>
+		</fieldset>
+		<ul class="w-full ml-6 flex items-center space-x-4">
+			<li><a href="">Gitbut</a></li>
+			<li><a href="">Linkedin</a></li>
+			<li><a href="">Email</a></li>
+		</ul>
+	</section>
 </header>
