--- a/website/src/components/BaseHead.astro
+++ b/website/src/components/BaseHead.astro
@@ -1,4 +1,5 @@
 ---
+import '../style/base.css'
 interface Props {
 	title: string;
 	description: string;
@@ -14,7 +15,6 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="stylesheet" href="/index.css">
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
@@ -42,3 +42,5 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
