--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -4,6 +4,13 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import { getRepositoryCommits } from '../utils/githubApi';
+import { getCollection } from 'astro:content';
+import PostCard  from '../components/PostCard.astro';
+
+
+const posts = (await getCollection('blog')).sort(
+	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+);
 
 const owner = "viriatonova"
 const repor =  "poc_fastapi"
@@ -19,8 +26,19 @@ const data: any = await getRepositoryCommits(owner, repor, token)
 	</head>
 	<body class="px-40">
 		<Header title={SITE_TITLE} />
-		<main class="mt-12">
-			
+		<main class="flex justify-start items-start mt-12">
+			<aside class="w-1/3">
+				barra lateral
+			</aside>
+			<section class="w-full">
+				<div class="list-none flex flex-col justify-center items-center">
+					{
+						posts.map((post) => (
+							<PostCard post={post}/>
+						))
+					}
+				</div>
+			</section>
 		</main>
 		<Footer />
 	</body>
