--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -2,9 +2,8 @@
 import { SITE_TITLE } from '../consts';
 ---
 
-<header class="w-full mt-4 flex justify-start border-b border-amber-950">
+<header class="w-full mt-4 flex justify-start">
 	<section class="w-full">
-		<h2 class="text-2xl">{SITE_TITLE}</h2>
 		<nav class="mt-2 py-2 flex space-x-6 list-none">
 			<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Home</a></li>
 			<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
@@ -18,17 +17,17 @@ import { SITE_TITLE } from '../consts';
 		<ul class="w-auto ml-6 flex justify-end items-center space-x-4">
 			<li>
 				<a class="btn btn-social" href="">
-					<ion-icon name="logo-github"></ion-icon>
+					<ion-icon id="icon-social" name="logo-github"></ion-icon>
 				</a>
 			</li>
 			<li>
 				<a class="btn btn-social" href="">
-					<ion-icon name="logo-linkedin"></ion-icon>
+					<ion-icon id="icon-social" name="logo-linkedin"></ion-icon>
 				</a>
 			</li>
 			<li>
 				<a class="btn btn-social" href="">
-					<ion-icon name="mail-outline"></ion-icon>
+					<ion-icon id="icon-social" name="mail-outline"></ion-icon>
 				</a>
 			</li>
 		</ul>
