--- a/website/src/components/PostCard.astro
+++ b/website/src/components/PostCard.astro
@@ -2,16 +2,33 @@
 import FormattedDate from '../components/FormattedDate.astro';
 import type { CollectionEntry } from 'astro:content';
 
-type Props = CollectionEntry<'blog'>;
+type post = CollectionEntry<'blog'>;
 
-const {id, slug, body, collection, data } = Astro.props;
+const { post } = Astro.props;
 ---
-<article>
-    <a href={`/blog/${slug}/`}>
-        <img width={720} height={360} src={data.heroImage} alt="" />
-        <h4 class="title">{data.title}</h4>
-        <p class="date">
-            <FormattedDate date={data.pubDate} />
-        </p>
+<article class="flex justify-start items-center">
+    <a 
+        class="flex justify-start items-center"
+        href={`/blog/${post.slug}/`}
+    >
+        <header class="w-60 font-mono">
+            <p class="date">
+                <FormattedDate date={post.data.pubDate} />
+            </p>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+        </header>
+        <div class="w-full">
+            <h3 class="w-full font-bold text-2xl tracking-wider">
+                {post.data.title}
+            </h3>
+            <ul class="card-info">
+                <li>{post.data.description}</li>
+                <li>{post.data.description}</li>
+                <p>ref.:{post.data.serie}</p>
+            </ul>
+        </div>
     </a>
 </article>
