--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -7,7 +7,6 @@ import { getRepositoryCommits } from '../utils/githubApi';
 import { getCollection } from 'astro:content';
 import PostCard  from '../components/PostCard.astro';
 
-
 const posts = (await getCollection('blog')).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
@@ -16,7 +15,7 @@ const owner = "viriatonova"
 const repor =  "poc_fastapi"
 const token = process.env.TOKEN
  
-const data: any = await getRepositoryCommits(owner, repor, token)
+// const data: any = await getRepositoryCommits(owner, repor, token)
 ---
 
 <!DOCTYPE html>
@@ -27,17 +26,17 @@ const data: any = await getRepositoryCommits(owner, repor, token)
 	<body class="px-40">
 		<Header title={SITE_TITLE} />
 		<main class="flex justify-start items-start mt-12">
-			<aside class="w-1/3">
+			<aside class="w-1/2">
 				barra lateral
 			</aside>
 			<section class="w-full">
-				<div class="list-none flex flex-col justify-center items-center">
+				<ul class="list-none flex flex-col justify-center items-start">
 					{
 						posts.map((post) => (
 							<PostCard post={post}/>
 						))
 					}
-				</div>
+				</ul>
 			</section>
 		</main>
 		<Footer />
