working on filter posts

--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="w-full">
+<footer class="w-full h-44 mt-24">
 	<p>&copy; {today.getFullYear()} Viriato Nova</p>
 </footer>
