--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -6,15 +6,20 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import { getRepositoryCommits } from '../utils/githubApi';
 import { getCollection } from 'astro:content';
 import PostCard  from '../components/PostCard.astro';
+import type { CollectionEntry } from 'astro:content';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+type post = CollectionEntry<'blog'>;
+
+const page = 1
+const startIndex = (page - 1) * 10;
+const endIndex = startIndex + 10;
+const posts = (await getCollection('blog'))
+	.slice(startIndex, endIndex)
+	.sort((a, b) => a.data.number.valueOf() - b.data.number.valueOf())
 
 const owner = "viriatonova"
 const repor =  "poc_fastapi"
 const token = process.env.TOKEN
- 
 // const data: any = await getRepositoryCommits(owner, repor, token)
 ---
 
@@ -23,22 +28,29 @@ const token = process.env.TOKEN
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="px-40">
-		<Header title={SITE_TITLE} />
-		<main class="flex justify-start items-start mt-12">
-			<aside class="w-1/2">
-				barra lateral
-			</aside>
-			<section class="w-full">
-				<ul class="list-none flex flex-col justify-center items-start">
-					{
-						posts.map((post) => (
-							<PostCard post={post}/>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
+	<body>
+		<div class="w-full h-full px-40">
+			<Header title={SITE_TITLE} />
+			<main class="flex justify-start items-start mt-20">
+				<aside class="w-1/2">
+					barra lateral
+				</aside>
+				<section class="w-full flex justify-end">
+					<ul 
+						class="
+							list-none flex flex-col justify-center items-start
+							space-y-6
+						"
+					>
+						{
+							posts.map((post) => (
+								<PostCard post={post}/>
+							))
+						}
+					</ul>
+				</section>
+			</main>
+			<Footer />
+		</div>
 	</body>
 </html>
