--- a/website/src/style/base.css
+++ b/website/src/style/base.css
@@ -6,13 +6,11 @@
 
 @layer base {
     body {
-        @apply font-sans text-neutral-900
+        @apply w-full h-full m-0 p-0
+        font-sans text-neutral-900
     }
     h2 {
         @apply font-sans font-semibold text-2xl tracking-wider
-    }
-    a {
-        @apply text-lg hover:underline
     }
     #icon-social {
         @apply h-6 w-6
