--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -2,6 +2,8 @@
 const today = new Date();
 ---
 
-<footer class="w-full h-44 mt-24">
-	<p>&copy; {today.getFullYear()} Viriato Nova</p>
+<footer class="w-full h-44 mt-24 bg-neutral-900 text-white">
+	<div class="w-full h-full pagination">
+		<p>&copy; {today.getFullYear()} Viriato Nova</p>
+	</div>
 </footer>
