--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -2,34 +2,36 @@
 import { SITE_TITLE } from '../consts';
 ---
 
-<header class="w-full mt-4 flex justify-start">
-	<section class="w-full">
-		<nav class="mt-2 py-2 flex space-x-6 list-none">
-			<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Home</a></li>
-			<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
-			<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Contato</a></li>
-		</nav>
-	</section>
-	<section class="w-1/2 flex justify-end items-center">
-		<fieldset class="input-text"> 
-			<input type="text" name="" id="">
-		</fieldset>
-		<ul class="w-auto ml-6 flex justify-end items-center space-x-4">
-			<li>
-				<a class="btn btn-social" href="">
-					<ion-icon id="icon-social" name="logo-github"></ion-icon>
-				</a>
-			</li>
-			<li>
-				<a class="btn btn-social" href="">
-					<ion-icon id="icon-social" name="logo-linkedin"></ion-icon>
-				</a>
-			</li>
-			<li>
-				<a class="btn btn-social" href="">
-					<ion-icon id="icon-social" name="mail-outline"></ion-icon>
-				</a>
-			</li>
-		</ul>
-	</section>
+<header class="w-full mt-4">
+	<div class="w-full h-full pagination flex justify-start">
+		<section class="w-full">
+			<nav class="mt-2 py-2 flex space-x-6 list-none">
+				<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Blog</a></li>
+				<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
+				<li><a class="btn-navigation" href="/" target="_blank" rel="noopener noreferrer">Contato</a></li>
+			</nav>
+		</section>
+		<section class="w-1/2 flex justify-end items-center">
+			<fieldset class="input-text"> 
+				<input type="text" name="" id="">
+			</fieldset>
+			<ul class="w-auto ml-6 flex justify-end items-center space-x-4">
+				<li>
+					<a class="btn btn-social" href="">
+						<ion-icon id="icon-social" name="logo-github"></ion-icon>
+					</a>
+				</li>
+				<li>
+					<a class="btn btn-social" href="">
+						<ion-icon id="icon-social" name="logo-linkedin"></ion-icon>
+					</a>
+				</li>
+				<li>
+					<a class="btn btn-social" href="">
+						<ion-icon id="icon-social" name="mail-outline"></ion-icon>
+					</a>
+				</li>
+			</ul>
+		</section>
+	</div>
 </header>
