--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -14,8 +14,8 @@ const page = 1
 const startIndex = (page - 1) * 10;
 const endIndex = startIndex + 10;
 const posts = (await getCollection('blog'))
+	.sort((a, b) => parseInt(a.data.number) - parseInt(b.data.number))
 	.slice(startIndex, endIndex)
-	.sort((a, b) => a.data.number.valueOf() - b.data.number.valueOf())
 
 const owner = "viriatonova"
 const repor =  "poc_fastapi"
@@ -29,19 +29,16 @@ const token = process.env.TOKEN
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<div class="w-full h-full px-40">
+		<div class="w-full h-full">
 			<Header title={SITE_TITLE} />
-			<main class="flex justify-start items-start mt-20">
-				<aside class="w-1/2">
-					barra lateral
-				</aside>
+			<main class="pagination flex justify-start items-start mt-20">
 				<section class="w-full flex justify-end">
 					<ul 
-						class="
-							list-none flex flex-col justify-center items-start
-							space-y-6
-						"
+						class="w-full list-none grid grid-flow-row grid-cols-4 gap-6"
 					>
+						<li class="w-full h-full col-span-2">
+
+						</li>
 						{
 							posts.map((post) => (
 								<PostCard post={post}/>
