--- a/website/src/style/base.css
+++ b/website/src/style/base.css
@@ -20,6 +20,9 @@
     }
 }
 @layer components {
+    .pagination {
+        @apply px-40
+    }
     .btn{
         @apply py-1 px-2 flex justify-center items-center 
         font-semibold border border-amber-950 hover:border-transparent rounded
@@ -39,10 +42,10 @@
         focus:outline-none focus:shadow-sm focus:ring-2 ring-amber-300
     }
     .card-info{
-        @apply w-full flex justify-start items-center font-mono text-sm
+        @apply w-full mt-6 flex flex-col justify-start items-start font-mono text-sm
         text-neutral-800 list-none
     }
     .card-info li{
-        @apply mr-2 after:content-['_•'] 
+        @apply mr-2 before:content-['_•_'] 
     }
 }
